--- a/app/src/main/res/menu/drawner_view.xml
+++ b/app/src/main/res/menu/drawner_view.xml
@@ -3,14 +3,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_first_fragment"
-
-            android:title="First" />
+            android:title="WiFi Logs"
+            android:icon="@mipmap/wifi_icon"/>
         <item
             android:id="@+id/nav_second_fragment"
-
-            android:title="Second" />
-        <item
-            android:id="@+id/nav_third_fragment"
-            android:title="Third" />
+            android:title="Battery Logs"
+            android:icon="@mipmap/battery_icon"
+            />
     </group>
 </menu>
