--- a/app/src/main/res/menu/drawner_view.xml
+++ b/app/src/main/res/menu/drawner_view.xml
@@ -11,4 +11,6 @@
             android:icon="@mipmap/battery_icon"
             />
     </group>
+    <item android:id="@+id/id_clear_logs"
+        android:title="Clear logs"/>
 </menu>
